--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# Default ignored files
+/shelf/
+/workspace.xml
+
+# Editor-based HTTP Client requests
+/httpRequests/
+
 # intelliJ
-**/.idea
+**/.idea/
 *.iml
 
 # compiled classes
